# zskins

./: CLAUDE.md  Cargo.toml
crates/icon-theme/: Cargo.toml
crates/icon-theme/src/: lib.rs
crates/zbar/: Cargo.toml
crates/zbar/src/: bar.rs  bluetooth.rs  lib.rs  main.rs  theme.rs
crates/zbar/src/backend/: detect.rs  ext_workspace.rs  mod.rs  sway.rs
crates/zbar/src/modules/: battery.rs  brightness.rs  clock.rs  cpu_mem.rs  mod.rs  network.rs  network_popup.rs  quicksettings.rs  settings.rs  tray.rs  tray_menu.rs  volume.rs  window_title.rs  workspaces.rs
crates/zbar/src/modules/quicksettings/: bt.rs  mod.rs  osd.rs  panel.rs  system.rs  widgets.rs  wifi.rs
crates/zbar/tests/: sway_parse.rs  sway_wire.rs
crates/zbar/tests/fixtures/: sway_workspace_event.json
crates/zlauncher/: Cargo.toml
crates/zlauncher/src/: icon.rs  launcher.rs  main.rs
crates/zofi/: Cargo.toml
crates/zofi-clipd/: Cargo.toml
crates/zofi-clipd-core/: Cargo.toml
crates/zofi-clipd/src/: daemon.rs  db.rs  ipc.rs  main.rs  paths.rs  pidfile.rs
crates/zofi/src/: clipd.rs  fuzzy.rs  input.rs  launcher.rs  main.rs  registry.rs  source.rs  theme.rs  usage.rs
crates/zofi/src/sources/: clipboard.rs  mod.rs  union.rs  windows.rs
crates/zofi/src/sources/apps/: icon.rs  mod.rs
crates/zwindows/src/: sway_tree.rs
crates/zwindows/src/compositor/: hyprland.rs  mod.rs  noop.rs  sway.rs
src/: bar.rs  lib.rs  main.rs
src/backend/: detect.rs  ext_workspace.rs  sway.rs
src/modules/: window_title.rs
tests/: sway_parse.rs
tests/fixtures/: sway_workspaces.json
