[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland", "x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
env_logger = "0.11"
async-channel = "2"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"] }

[profile.release]
lto = "thin"
