[package]
name = "zlauncher"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# gtk4.workspace = true  # no longer needed for icon lookup
unicode-segmentation.workspace = true
rayon.workspace = true
