[package]
name = "zofi-clipd"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true
rusqlite.workspace = true
blake3.workspace = true
nix.workspace = true
uuid.workspace = true
