[package]
name = "zofi"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
anyhow.workspace = true
zofi-clipd-core = { path = "../zofi-clipd-core" }
nix.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-segmentation.workspace = true
rayon.workspace = true
